<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LogIn">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <ImageView
        android:id="@+id/galleta"
        android:src="@drawable/galleta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/bgimg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.0"
        android:background="@color/Purple" />

    <ImageView
        android:id="@+id/Img"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_margin="40dp"
        android:src="@drawable/ic_cookie_sing_up"
        app:layout_constraintBottom_toBottomOf="@id/guia4"
        app:layout_constraintEnd_toEndOf="@id/guia2"
        app:layout_constraintStart_toStartOf="@id/guia1"
        app:layout_constraintTop_toTopOf="@id/main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@id/guia2"
        app:layout_constraintStart_toStartOf="@id/guia1"
        app:layout_constraintTop_toBottomOf="@id/guia4"
        app:startIconDrawable="@drawable/ic_cookie"
        >
        <EditText
            android:id="@+id/Name"
            android:hint="@string/full_name"
            style="@style/TextField" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fill2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guia2"
        app:layout_constraintStart_toStartOf="@id/guia1"
        app:layout_constraintTop_toBottomOf="@id/fill"
        app:startIconDrawable="@drawable/ic_cookie">

        <EditText
            android:id="@+id/Email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            style="@style/TextField" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fill3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guia2"
        app:layout_constraintStart_toStartOf="@id/guia1"
        app:layout_constraintTop_toBottomOf="@id/fill2"
        app:startIconDrawable="@drawable/ic_cookie"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/Password"
            android:hint="@string/password"
            style="@style/TextField" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fill4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guia2"
        app:layout_constraintStart_toStartOf="@id/guia1"
        app:layout_constraintTop_toBottomOf="@id/fill3"
        app:startIconDrawable="@drawable/ic_cookie"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/ConfirmPassword"
            android:hint="@string/repeat_password"
            style="@style/TextField" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/Continue"
        android:text="@string/Continue"
        android:onClick="openMain"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guia2"
        app:layout_constraintStart_toStartOf="@id/guia1"
        app:layout_constraintTop_toBottomOf="@id/fill4"
        app:layout_constraintBottom_toTopOf="@id/Cancel"
        app:cornerRadius="0dp"
        style="@style/FlatButton_Continue" />

    <Button
        android:id="@+id/Cancel"
        android:text="@string/cancel"
        android:onClick="openLogIn"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guia2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/guia1"
        app:layout_constraintTop_toBottomOf="@id/Continue"
        app:layout_constraintVertical_chainStyle="packed"
        app:cornerRadius="0dp"
        style="@style/FlatButton_Back" />


</androidx.constraintlayout.widget.ConstraintLayout>